--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,34 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.post-preview {
+	margin-top: 1em;
+	margin-bottom: 4em;
+}
+
+.lesmer {
+	margin-left: 1em;
+	font-style: italic;
+}
+
+.iframe-container {
+	margin-bottom: 0.5em;
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	padding-top: 56.25%;
+}
+
+.youtube-embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .container {
 	background-color: white;
 	min-height: 90%;
@@ -29,9 +57,9 @@ code {
 	width: 70vw;
 	margin-left: auto;
 	margin-right: auto;
-	-webkit-box-shadow: 0px 5px 22px 0px rgba(0, 0, 0, 0.3);
-	-moz-box-shadow: 0px 5px 22px 0px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 5px 22px 0px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 5px 22px 0px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0px 5px 22px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 5px 22px 0px rgba(0, 0, 0, 0.2);
 }
 
 .jumbo-text {
@@ -75,6 +103,10 @@ code {
 	max-width: 14em;
 }
 
+.logo-img {
+	width: 100%;
+}
+
 .nav-list {
 	margin: auto;
 	margin-right: 4em;
@@ -92,6 +124,7 @@ code {
 
 .nav-item:hover {
 	color: rgb(215, 215, 215);
+	cursor: pointer !important;
 }
 
 .person-box {
@@ -159,6 +192,10 @@ code {
 
 .footer-space {
 	height: 10em;
+}
+
+.post-title:hover {
+	color: crimson;
 }
 
 a,
